# short-url

./: .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf  pyproject.toml  sentinel.conf
k8s/: app-deployment.yaml  cassandra.yaml  configmap.yaml  deploy.ps1  deploy.sh  hpa.yaml  ingress.yaml  namespace.yaml  redis.yaml  secret.yaml
src/: database.py  main.py  models.py  settings.py  url_repository.py
