[tool.poetry]
name = "short-url"
version = "0.1.0"
description = ""
authors = ["Francisco Henriques <48632339+FMIFH@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.121.2"
redis = "^7.0.1"
uvicorn = "^0.38.0"
httpx = "^0.28.1"
pydantic = "^2.12.4"
pydantic-settings = "^2.12.0"
hashids = "^1.3.1"
cassandra-driver = "^3.29.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
